# F2025

./: .gitignore  Lab1_Yixun_Hu.ipynb  Lab2.ipynb  Lab3.ipynb  Lab4.ipynb  Lab5.ipynb  Lab6.ipynb  Lab7.ipynb  Lab8-Yixun_Hu.ipynb  Lab8-mingtong.ipynb  Lab9.ipynb  Midterm.ipynb  README.md  problem2.ipynb  test-pid.ipynb
final_project/: README.md  pyproject.toml  train_model.py
final_project/drone/configs/: example_fly_config.yaml
final_project/drone/configs/models/: continuous_action_model.yaml  discrete_action_model.yaml
final_project/drone/controls/: crazyflie_control.py
final_project/drone/datasets/: dataloader.py
final_project/drone/datasets/imitation_data/trial_01/: analysis_report.json  data_log.json  metadata.json
final_project/drone/datasets/utils/: README_IL.md  analyze_il_data.py  keyboard_control_IL.py  test_dataloader.py  test_log_variables.py
final_project/drone/models/: continuous_action_model.py  discrete_action_model.py
final_project/drone/scripts/: fly.py  keyboard_control_IL.py  training_model.ipynb
quad_data/: lqr_gains.npy
